# poropy

./: main.py
doc/source/: conf.py
interface/: graph.py  interface.py  interface.pyw.bak  model.py  model.py.bak  plugin.py  plugincontrol.py  plugincontrol.py.bak
interface/plugins/evaluator/: EvaluatorFlareMeta.py  EvaluatorLabanMeta.py
interface/plugins/objective/: DefaultObjective.py.bak
interface/plugins/optimizer/: OptimizerGAMeta.py  OptimizerGEDBSMeta.py  OptimizerGESBSMeta.py  OptimizerSAMeta.py  OptimizerTABUMeta.py
interface/plugins/reactor/: LargeCore.py.bak  SmallCore.py.bak  Yamamoto.py.bak
interface/widgets/: __init__.py.bak  assemblydisplay.py  coredisplay.py  coredisplay.py.bak  diagwidgets.py  diagwidgets.py.bak  logwatcher.py  logwatcher.py.bak  patternlist.py  patternlist.py.bak  plotwidget.py  plotwidget.py.bak
interface/widgets/pyqtgraph/: __init__.py
poropy_core/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  poropy_config.h.in
poropy_core/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
poropy_core/config/: poropy_config.h
poropy_core/examples/: test_depletion.py  test_poropy_core.py  test_thermal_model.py
poropy_core/src/: Assembly.cc  Assembly.hh  BaseDataModel.cc  BaseDataModel.hh  BaseSolver.cc  BaseSolver.hh  BaseThermalModel.cc  BaseThermalModel.hh  CMakeLists.txt  Core.cc  Core.hh  Core.i.hh  DBC.hh  Definitions.hh  FixedDataModel.cc  FixedDataModel.hh  FlareSolver.cc  FlareSolver.hh  GenException.cc  GenException.hh  Logger.hh  Makefile  MathUtilities.hh  ParamDB.cc  ParamDB.hh  ParamDB.i.hh  SimpleDataModel.cc  SimpleDataModel.hh  SoftEquivalence.hh  State.cc  State.hh  TestDriver.hh  cmake_install.cmake  poropy.cc  poropy.i
poropy_core/src/test/: CMakeLists.txt  core_fixture.hh  test_Core.cc  test_FlareSolver.cc  test_MathUtilities.cc  test_ParamDB.cc  test_Testing.cc
poropy_core/tools/: config_poropy
